You can now download the converted document in a browser. For example, go to: http://127.0.0.1:10010/download?documentName=input.docx
